--- a/provider-user/pom.xml
+++ b/provider-user/pom.xml
@@ -15,12 +15,20 @@
 		<groupId>com.github.weiwei02.microservice</groupId>
 		<artifactId>micro-service-parent</artifactId>
 		<version>0.1</version>
-		<relativePath>../microserviceparent/pom.xml</relativePath>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.github.weiwei02.microservice</groupId>
