--- a/mecroservice-eureka/pom.xml
+++ b/mecroservice-eureka/pom.xml
@@ -15,7 +15,7 @@
 		<groupId>com.github.weiwei02.microservice</groupId>
 		<artifactId>micro-service-parent</artifactId>
 		<version>0.1</version>
-		<relativePath>../microserviceparent/pom.xml</relativePath>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<properties>
