--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>micro-service-data</module>
         <module>provider-movie</module>
         <module>provider-user</module>
+        <module>provider-movie-without-eureka</module>
     </modules>
 
     <properties>
@@ -33,20 +34,11 @@
         <druid-spring-boot-starter.version>1.1.3</druid-spring-boot-starter.version>
         <mapper-spring-boot-starter.version>1.1.4</mapper-spring-boot-starter.version>
         <spring-cloud-starter-eureka.version>1.3.4.RELEASE</spring-cloud-starter-eureka.version>
+        <spring-cloud-starter-ribbon.version>1.3.4.RELEASE</spring-cloud-starter-ribbon.version>
+        <spring-cloud-starter-feign.version>1.3.4.RELEAS</spring-cloud-starter-feign.version>
     </properties>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-eureka -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka</artifactId>
-            <version>${spring-cloud-starter-eureka.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-            <version>${spring-cloud-starter-eureka.version}</version>
-        </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -100,6 +92,29 @@
                 <version>${druid.version}</version>
             </dependency>
             <!--orm end-->
+
+            <!--spring clould-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-eureka</artifactId>
+                <version>${spring-cloud-starter-eureka.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-actuator</artifactId>
+                <version>${spring-cloud-starter-eureka.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-ribbon</artifactId>
+                <version>${spring-cloud-starter-ribbon.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-feign</artifactId>
+                <version>${spring-cloud-starter-feign.version}</version>
+            </dependency>
+            <!--spring clould-->
         </dependencies>
     </dependencyManagement>
 
