--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-feign</artifactId>
-                <version>${spring-cloud-starter-feign.version}</version>
+                <version>1.3.4.RELEASE</version>
             </dependency>
             <!--spring clould-->
         </dependencies>
