--- a/provider-user/pom.xml
+++ b/provider-user/pom.xml
@@ -17,6 +17,7 @@
 		<version>0.1</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -35,6 +36,12 @@
 			<artifactId>micro-service-data</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>${spring-boot-starter-security.version}</version>
+        </dependency>
 
 	</dependencies>
 
