--- a/common-parent/pom.xml
+++ b/common-parent/pom.xml
@@ -17,10 +17,11 @@
         <spring.boot.version>1.5.9.RELEASE</spring.boot.version>
         <spring-cloud-task.version>1.2.2.RELEASE</spring-cloud-task.version>
         <guava.version>18.0</guava.version>
-        <junit.version>4.17</junit.version>
+        <junit.version>4.12</junit.version>
         <logback.version>1.2.3</logback.version>
         <slf4j.version>1.7.25</slf4j.version>
         <fastjson.version>1.2.33</fastjson.version>
+        <spring.version>5.0.2.RELEASE</spring.version>
     </properties>
     <developers>
         <developer>
